# RCC

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
rcc-client/src/: Cargo.toml  main.rs
rcc-proto/: Cargo.toml  build.rs  rcc.proto
rcc-service/: Cargo.toml  schema.sql
rcc-service/src/: auth.rs  db.rs  main.rs
rcc-soap/: Cargo.toml
rcc-soap/src/: main.rs
rcc-wasm-game/: Cargo.toml
rcc-wasm-game/src/: lib.rs
scripts/: build_all.sh  integration_test.sh
