[package]
name = "rcc-soap"
version = "0.1.0"
edition = "2021"

[dependencies]
rcc-proto = { path = "../rcc-proto" }
tonic = "0.10"
tokio = { version = "1.0", features = ["full"] }
wasmtime = "14.0"
wasmtime-wasi = "14.0"
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
crossbeam-channel = "0.5"
