[package]
name = "rcc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12" 
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
url = "2.4"
rand = "0.8"
